--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,5 +17,9 @@
   },
   "devDependencies": {
     "sagui": "^7.4.0"
+  },
+  "dependencies": {
+    "ramda": "^0.22.1",
+    "simplex-noise": "^2.2.0"
   }
 }
