--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "ramda": "^0.22.1",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "simplex-noise": "^2.2.0"
   }
 }
