--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "ramda": "^0.22.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
     "simplex-noise": "^2.2.0"
   }
 }
