--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "build": "sagui build",
     "develop": "sagui develop --port 3000",
-    "dist": "cross-env NODE_ENV=production sagui build --optimize",
+    "dist": "NODE_ENV=production sagui build --optimize",
     "start": "npm run develop",
     "test": "npm run test:lint && npm run test:typecheck && npm run test:unit",
     "test:coverage": "npm run test:unit -- --coverage",
     "test:lint": "sagui lint",
     "test:typecheck": "sagui typecheck",
-    "test:unit": "cross-env NODE_ENV=test sagui test",
+    "test:unit": "NODE_ENV=test sagui test",
     "test:unit:watch": "npm run test:unit -- --watch"
   },
   "devDependencies": {
