--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,15 +15,13 @@
     "test:unit": "NODE_ENV=test sagui test",
     "test:unit:watch": "npm run test:unit -- --watch"
   },
-  "devDependencies": {
-    "sagui": "^7.4.0"
-  },
   "dependencies": {
     "ramda": "^0.22.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "sagui": "^7.4.0",
     "simplex-noise": "^2.2.0"
   }
 }
