--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Day One",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "postinstall": "cd frontend && npm install && npm run dist && cp dist/* ../public && cd .."
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.13.3"
