--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "ramda": "^0.22.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-motion": "^0.4.5",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "sagui": "^7.4.0",
