--- a/package.json
+++ b/package.json
@@ -5,15 +5,13 @@
   "license": "MIT",
   "scripts": {
     "build": "sagui build",
-    "develop": "sagui develop --port 3000",
-    "dist": "NODE_ENV=production sagui build --optimize",
-    "start": "npm run develop",
-    "test": "npm run test:lint && npm run test:typecheck && npm run test:unit",
-    "test:coverage": "npm run test:unit -- --coverage",
-    "test:lint": "sagui lint",
-    "test:typecheck": "sagui typecheck",
-    "test:unit": "NODE_ENV=test sagui test",
-    "test:unit:watch": "npm run test:unit -- --watch"
+    "dist": "sagui dist",
+    "start": "sagui develop --port 3000",
+    "test": "sagui test",
+    "test:lint": "sagui test:lint",
+    "test:typecheck": "sagui test:typecheck",
+    "test:unit": "sagui test:unit --coverage",
+    "test:unit:watch": "sagui test:unit --watch"
   },
   "dependencies": {
     "alea": "^0.0.9",
@@ -22,7 +20,9 @@
     "react-dom": "^15.3.2",
     "react-motion": "^0.4.5",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0",
-    "sagui": "^7.4.0"
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "sagui": "^8.0.0-rc.3"
   }
 }
