--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^15.3.2",
     "react-motion": "^0.4.5",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "spectacle": "^1.2.5"
   },
   "devDependencies": {
     "sagui": "^8.0.0-rc.3"
