--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.3.2",
     "react-motion": "^0.4.5",
     "react-redux": "^4.4.5",
+    "recharts": "^0.20.2",
     "redux": "^3.6.0",
     "spectacle": "^1.2.5"
   },
